--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-12 col-sm-4 order-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="col-12 col-sm order-sm-first col-md">
+            <div class="col-12 col-sm order-first col-md">
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="images/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2>Uthappizza</h2>
+                        <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>    
                 </div>   
